# mytestpythonpackage

./: .gitignore  README.md  justfile  pyproject.toml  setup.sh  testing-01.py  testing-02.py  uv-run-ruff-check-output-2025-02-27.txt
.github/workflows/: docs.yml  sphinx-site.yml  tests.yml
docs/source/: conf.py  index.rst
mytestpackage/: __init__.py  myfunctions.py  myimportedfns.py
tests/: test_f.py  test_myrand.py  test_say_goodbye.py  test_say_hello.py
